core/engine/tests/snapshots/engine__customer-lifetime-value_0.snap
---
source: core/engine/tests/engine.rs
expression: serialized_result
---
performance: "[perf]"
result:
  acquisitionCostRatio:
    "$serde_json::private::Number": "0.0095436036647438072616219885"
  adjustedLTV:
    "$serde_json::private::Number": "15567.333333333333333333333334"
  averageOrderValue:
    "$serde_json::private::Number": "168.4"
  basicLTV:
    "$serde_json::private::Number": "15717.333333333333333333333334"
  customer:
    acquisitionChannel: paid_search
    acquisitionCost:
      "$serde_json::private::Number": "150"
    id: CUST-12345
    name: John Doe
    segment: retail
  customerInsights:
    recommendedStrategy: "High-touch service, premium offers, exclusive events"
    tier: platinum
  customerLifetimeMonths:
    "$serde_json::private::Number": "80"
  grossMargin:
    "$serde_json::private::Number": "0.35"
  purchaseFrequency:
    "$serde_json::private::Number": "3.3333333333333333333333333336"
  purchaseHistory:
    averageGrossMarginPercent:
      "$serde_json::private::Number": "35"
    customerDurationMonths:
      "$serde_json::private::Number": "18"
    orderValues:
      - "$serde_json::private::Number": "120"
      - "$serde_json::private::Number": "89"
      - "$serde_json::private::Number": "245"
      - "$serde_json::private::Number": "78"
      - "$serde_json::private::Number": "310"
    retentionRate:
      "$serde_json::private::Number": "85"
trace:
  dt1:
    id: dt1
    input:
      acquisitionCostRatio:
        "$serde_json::private::Number": "0.0095436036647438072616219885"
      adjustedLTV:
        "$serde_json::private::Number": "15567.333333333333333333333334"
      averageOrderValue:
        "$serde_json::private::Number": "168.4"
      basicLTV:
        "$serde_json::private::Number": "15717.333333333333333333333334"
      customer:
        acquisitionChannel: paid_search
        acquisitionCost:
          "$serde_json::private::Number": "150"
        id: CUST-12345
        name: John Doe
        segment: retail
      customerLifetimeMonths:
        "$serde_json::private::Number": "80"
      grossMargin:
        "$serde_json::private::Number": "0.35"
      purchaseFrequency:
        "$serde_json::private::Number": "3.3333333333333333333333333336"
      purchaseHistory:
        averageGrossMarginPercent:
          "$serde_json::private::Number": "35"
        customerDurationMonths:
          "$serde_json::private::Number": "18"
        orderValues:
          - "$serde_json::private::Number": "120"
          - "$serde_json::private::Number": "89"
          - "$serde_json::private::Number": "245"
          - "$serde_json::private::Number": "78"
          - "$serde_json::private::Number": "310"
        retentionRate:
          "$serde_json::private::Number": "85"
    name: customer_segmentation
    order:
      "$serde_json::private::Number": "2"
    output:
      acquisitionCostRatio:
        "$serde_json::private::Number": "0.0095436036647438072616219885"
      adjustedLTV:
        "$serde_json::private::Number": "15567.333333333333333333333334"
      averageOrderValue:
        "$serde_json::private::Number": "168.4"
      basicLTV:
        "$serde_json::private::Number": "15717.333333333333333333333334"
      customer:
        acquisitionChannel: paid_search
        acquisitionCost:
          "$serde_json::private::Number": "150"
        id: CUST-12345
        name: John Doe
        segment: retail
      customerInsights:
        recommendedStrategy: "High-touch service, premium offers, exclusive events"
        tier: platinum
      customerLifetimeMonths:
        "$serde_json::private::Number": "80"
      grossMargin:
        "$serde_json::private::Number": "0.35"
      purchaseFrequency:
        "$serde_json::private::Number": "3.3333333333333333333333333336"
      purchaseHistory:
        averageGrossMarginPercent:
          "$serde_json::private::Number": "35"
        customerDurationMonths:
          "$serde_json::private::Number": "18"
        orderValues:
          - "$serde_json::private::Number": "120"
          - "$serde_json::private::Number": "89"
          - "$serde_json::private::Number": "245"
          - "$serde_json::private::Number": "78"
          - "$serde_json::private::Number": "310"
        retentionRate:
          "$serde_json::private::Number": "85"
    performance: "[perf]"
    traceData:
      index:
        "$serde_json::private::Number": "0"
      reference_map:
        adjustedLTV:
          "$serde_json::private::Number": "15567.333333333333333333333334"
      rule:
        _id: r1-1
        "adjustedLTV[i1-1]": "> 2000"
  ex1:
    id: ex1
    input:
      customer:
        acquisitionChannel: paid_search
        acquisitionCost:
          "$serde_json::private::Number": "150"
        id: CUST-12345
        name: John Doe
        segment: retail
      purchaseHistory:
        averageGrossMarginPercent:
          "$serde_json::private::Number": "35"
        customerDurationMonths:
          "$serde_json::private::Number": "18"
        orderValues:
          - "$serde_json::private::Number": "120"
          - "$serde_json::private::Number": "89"
          - "$serde_json::private::Number": "245"
          - "$serde_json::private::Number": "78"
          - "$serde_json::private::Number": "310"
        retentionRate:
          "$serde_json::private::Number": "85"
    name: clv_calculation
    order:
      "$serde_json::private::Number": "1"
    output:
      acquisitionCostRatio:
        "$serde_json::private::Number": "0.0095436036647438072616219885"
      adjustedLTV:
        "$serde_json::private::Number": "15567.333333333333333333333334"
      averageOrderValue:
        "$serde_json::private::Number": "168.4"
      basicLTV:
        "$serde_json::private::Number": "15717.333333333333333333333334"
      customer:
        acquisitionChannel: paid_search
        acquisitionCost:
          "$serde_json::private::Number": "150"
        id: CUST-12345
        name: John Doe
        segment: retail
      customerLifetimeMonths:
        "$serde_json::private::Number": "80"
      grossMargin:
        "$serde_json::private::Number": "0.35"
      purchaseFrequency:
        "$serde_json::private::Number": "3.3333333333333333333333333336"
      purchaseHistory:
        averageGrossMarginPercent:
          "$serde_json::private::Number": "35"
        customerDurationMonths:
          "$serde_json::private::Number": "18"
        orderValues:
          - "$serde_json::private::Number": "120"
          - "$serde_json::private::Number": "89"
          - "$serde_json::private::Number": "245"
          - "$serde_json::private::Number": "78"
          - "$serde_json::private::Number": "310"
        retentionRate:
          "$serde_json::private::Number": "85"
    performance: "[perf]"
    traceData:
      acquisitionCostRatio:
        result: "0.0095436036647438072616219885"
      adjustedLTV:
        result: "15567.333333333333333333333334"
      averageOrderValue:
        result: "168.4"
      basicLTV:
        result: "15717.333333333333333333333334"
      customerLifetimeMonths:
        result: "80"
      grossMargin:
        result: "0.35"
      purchaseFrequency:
        result: "3.3333333333333333333333333336"
  ip1:
    id: ip1
    input: ~
    name: request
    order:
      "$serde_json::private::Number": "0"
    output:
      customer:
        acquisitionChannel: paid_search
        acquisitionCost:
          "$serde_json::private::Number": "150"
        id: CUST-12345
        name: John Doe
        segment: retail
      purchaseHistory:
        averageGrossMarginPercent:
          "$serde_json::private::Number": "35"
        customerDurationMonths:
          "$serde_json::private::Number": "18"
        orderValues:
          - "$serde_json::private::Number": "120"
          - "$serde_json::private::Number": "89"
          - "$serde_json::private::Number": "245"
          - "$serde_json::private::Number": "78"
          - "$serde_json::private::Number": "310"
        retentionRate:
          "$serde_json::private::Number": "85"
    performance: "[perf]"
    traceData: ~
